<resources>
    <string name="app_name">Library_AbhishekBhandari</string>
    <string name="welcome">Welcome to AbhishekBhandari Library</string>
    <string name="goCheckOut_btn">Check Out</string>
    <string name="title_query">Query</string>
    <string name="goDoQuery_btn">Do Query</string>
    <string name="query_prompt">Choose a query</string>
    <string name="showresult_btn">Show Result</string>
    <string name="title_checkout"><![CDATA[Check Out & Return]]></string>
    <string name="studentID">Student ID</string>
    <string name="bookID">Book ID</string>
    <string name="date">Date</string>
    <string name="checkout_btn">Check Out</string>
    <string name="return_btn">Return</string>
    <string name="summary_btn">Summary</string>
    <string name="goBack_btn">Back To Main Menu</string>
    <string name="checkoutlist_btn">Show Checkout List</string>
    <string name="title_checkoutlist">Check Out Record</string>
    <string name="stname">Name</string>
    <string name="coreduedate">Due Date</string>
    <string name="lbtitle">Book Title</string>
    <string-array name="query_array">
        <item>Query: LIST OF ALL BOOKS</item>
        <item>Query: CALL NUMBERS OF BOOK \'Database Management\'</item>
        <item>Query: LIST OF ALL STUDENTS</item>
        <item>Query: BOOK DETAILS OF \'Fifth Discipline\'</item>
        <item>Query: BOOKS ISSUED BY STUDENT #111</item>
        <item>Query: STUDENTS WHO HAVE CHECKED OUT BOOKS</item>
        <item>Query: BOOK DETAILS OF \'Software Engineering\'</item>
    </string-array>
</resources>
