<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/title_query"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/querylist_spinner"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:entries="@array/query_array"
        android:prompt="@string/query_prompt" />

    <Button
        android:id="@+id/showresult_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/showresult_btn" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/goBack_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/goBack_btn" />
</LinearLayout>