<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView2"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:text="@string/goCheckOut_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/goCheckOut_btn"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp" />

    <Button
        android:text="@string/goDoQuery_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/goDoQuery_btn"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp" />

</LinearLayout>
