<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/title_checkout"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_StudentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_studentId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/studentID"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/studentID_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_BookID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_bookId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/bookID"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/bookID_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_DatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/date"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/datePicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/checkout_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:width="110dp"
                    android:onClick="onCheckoutBtnClick"
                    android:text="@string/checkout_btn" />

                <Button
                    android:id="@+id/return_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/checkout_btn"
                    android:layout_marginLeft="150dp"
                    android:width="110dp"
                    android:onClick="onReturnBtnClick"
                    android:text="@string/return_btn" />

                <Button
                    android:id="@+id/summary_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/checkout_btn"
                    android:layout_marginLeft="50dp"
                    android:width="110dp"
                    android:onClick="onSummaryBtnClick"
                    android:text="@string/summary_btn" />

                <Button
                    android:id="@+id/goBack_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/checkout_btn"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/return_btn"
                    android:width="110dp"
                    android:onClick="goHomePage"
                    android:text="@string/goBack_btn" />
            </RelativeLayout>
        </LinearLayout>
</ScrollView>